--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "illuminate/routing": "*",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "php-open-source-saver/jwt-auth": "^2.3",
-        "spatie/laravel-tail": "^4.5",
-        "tymon/jwt-auth": "^2.2"
+        "php-open-source-saver/jwt-auth": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
