--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-tail": "^4.5",
-        "tymon/jwt-auth": "^2.2"
+        "php-open-source-saver/jwt-auth": "^2.3",
+        "spatie/laravel-tail": "^4.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -24,13 +24,12 @@
         "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
-    "psr-4": {
-        "App\\": "app/",
-        "Database\\Factories\\": "database/factories/",
-        "Database\\Seeders\\": "database/seeders/"
-    }
-}
-,
+        "psr-4": {
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
+    },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
